test/integration/rstanarm/gqs/pretty.expected
  $ ../../../../../install/default/bin/stanc --include_paths="../" --auto-format gen_quantities_mvmer.stan

Syntax error at file "gen_quantities_mvmer.stan", line 1, columns 2-6, parsing error:
   -------------------------------------------------
     1:    real mean_PPD[M];
               ^
     2:    real yAlpha1[intercept_type[1] > 0];
     3:    real yAlpha2[intercept_type[2] > 0];
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".

